--- a/quem-somos.html
+++ b/quem-somos.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/global.css">
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<link rel="stylesheet" type="text/css" href="styles/navbar.css">
+	<link rel="stylesheet" type="text/css" href="styles//quem_somos.css">
 </head>
 <body>
 	<!-- NAVBAR -->
@@ -24,15 +25,32 @@
 			</div>
 			<div class="collapse-links bg-color-primary" id="collapse-links-js">
 				<ul class="navbar__list">
-					<li class="navbar__li"><a href="#" class="navbar__link">Home</a></li>
-					<li class="navbar__li"><a href="#" class="navbar__link active-link">Quem Somos</a></li>
-					<li class="navbar__li"><a href="#" class="navbar__link">Cursos</a></li>
-					<li class="navbar__li"><a href="#" class="navbar__link">Ead</a></li>
-					<li class="navbar__li"><a href="#" class="navbar__link">Serviços</a></li>
-					<li class="navbar__li"><a href="#" class="navbar__link">Contato</a></li>
+					<li class="navbar__li"><a href="index.html" class="navbar__link">Home</a></li>
+					<li class="navbar__li"><a href="quem-somos.html" class="navbar__link active-link">Quem Somos</a></li>
+					<li class="navbar__li"><a href="index.html#courses" class="navbar__link">Cursos</a></li>
+					<li class="navbar__li"><a href="ead.html" class="navbar__link">Ead</a></li>
+					<li class="navbar__li"><a href="quem-somos.html#services" class="navbar__link">Serviços</a></li>
+					<li class="navbar__li"><a href="contato.html" class="navbar__link">Contato</a></li>
 				</ul>	
 		</div>
 	</nav>
+
+	<!-- MAIN CONTENT -->
+	<main>
+		<!-- ABOUT -->
+		<div class="container-fluid">
+			<div class="container">
+				<div class="row" id="about">
+					<h2 class="title">Conheça a Nova Era</h2>
+					<p class="description">Quem é a Nova Era? A Nova Era é uma empresa que busca trazer ao mundo profissionais qualificados para Área Florestal. Tanto em:</p>
+					<ul class="list">
+						<li class="list__item" value="1">Conserto de Máquinas Florestais</li>
+						<li class="list__item" value=2>Operação de Máquinas Florestais</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</main>
 </body>
 <script src="activate_toggle_button.js"></script>
 </html>
