--- a/quem-somos.html
+++ b/quem-somos.html
@@ -7,7 +7,6 @@
 	<title>Quem Somos</title>
 
 	<link rel="stylesheet" type="text/css" href="styles/global.css">
-	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<link rel="stylesheet" type="text/css" href="styles/navbar.css">
 	<link rel="stylesheet" type="text/css" href="styles//quem_somos.css">
 </head>
@@ -37,20 +36,7 @@
 
 	<!-- MAIN CONTENT -->
 	<main>
-		<!-- ABOUT -->
-		<div class="container-fluid">
-			<div class="container">
-				<div class="row" id="about">
-					<h2 class="title">Conheça a Nova Era</h2>
-					<p class="description">Quem é a Nova Era? A Nova Era é uma empresa que busca trazer ao mundo profissionais qualificados para Área Florestal. Tanto em:</p>
-					<ul class="list">
-						<li class="list__item" value="1">Conserto de Máquinas Florestais</li>
-						<li class="list__item" value=2>Operação de Máquinas Florestais</li>
-					</ul>
-				</div>
-			</div>
-		</div>
 	</main>
 </body>
-<script src="activate_toggle_button.js"></script>
+<script src="scripts/activate_toggle_button.js"></script>
 </html>
