--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 	<meta name="description" content="Nova Era - Uma empresa que tem como objetivo formar os melhores profissionais florestais, para que cada vez mais possamos garantir mais empregos e profissionais de qualidade">
 	<meta name="keywords" content="Nova Era, Cursos, Retroescavadeira, Solda, Empilhadeira, Mecânicos Florestais, Máquinas Florestais">
 	
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" type="text/css" href="styles/style.css">
+	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" type="text/css" href="styles/home.css">
 	<link rel="stylesheet" type="text/css" href="styles/global.css">
 	<link rel="stylesheet" type="text/css" href="styles/navbar.css">
 	
-  <title>Página Inicial da Nova Era</title>
+	<title>Página Inicial da Nova Era</title>
 </head>
 <body onload="createCard()">
 	<!-- NAVBAR -->
@@ -97,14 +97,14 @@
 			</div>
 		</div>
 	</main>
-  
+
 	<footer class="footer">
 		<p class="footer__text">&copy; <a class="footer__link" href="https://github.com/rodrigobarbonifilho">Feito por Rodrigo Barboni Filho</a></p>
 	</footer>
 </body>
 <script src="scripts/showDivs.js"></script>
 <script src="scripts/createCards.js"></script>
-<script src="activate_toggle_button.js"></script>
+<script src="scripts/activate_toggle_button.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </html>
