--- a/quem-somos.html
+++ b/quem-somos.html
@@ -35,7 +35,18 @@
 	</nav>
 
 	<!-- MAIN CONTENT -->
-	<main>
+	<main id="main-content">
+		<!-- 1º Container -->
+		<div class="container-fluid"></div>
+		
+		<!-- 2º Container -->
+		<div class="container-fluid"></div>
+		
+		<!-- 3º Container -->
+		<div class="container-fluid"></div>
+		
+		<!-- 4º Container -->
+		<div class="container-fluid"></div>
 	</main>
 </body>
 <script src="scripts/activate_toggle_button.js"></script>
