--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 					<li class="navbar__li"><a href="ead.html" class="navbar__link">Ead</a></li>
 					<li class="navbar__li"><a href="servicos.html" class="navbar__link">Serviços</a></li>
 					<li class="navbar__li"><a href="contato.html" class="navbar__link">Contato</a></li>
-				</ul>	
+				</ul>
+			</div>
 		</div>
 	</nav>
 
