--- a/quem-somos.html
+++ b/quem-somos.html
@@ -37,17 +37,55 @@
 	<!-- MAIN CONTENT -->
 	<main id="main-content">
 		<!-- 1º Container -->
-		<div class="container-fluid"></div>
-		
+		<div class="container-fluid" id="info-container">
+			<div class="container">
+				<div class="indicators-wrapper">
+					<div class="indicator active"><a href="#info-container">Informações sobre a Nova Era</a></div>
+					<div class="indicator"><a href="#who-we-are-container">O que é a NOVA ERA</a></div>
+					<div class="indicator"><a href="#how-we-merged-container">Como a NOVA ERA surgiu</a></div>
+					<div class="indicator"><a href="#our-goal-container">Como pretendemos mudar isso</a></div>
+				</div>
+			</div>
+		</div>
+
 		<!-- 2º Container -->
-		<div class="container-fluid"></div>
+		<div class="container-fluid" id="who-we-are-container">
+			<div class="container">
+				<div class="indicators-wrapper">
+					<div class="indicator"><a href="#info-container">Informações sobre a Nova Era</a></div>
+					<div class="indicator active"><a href="#who-we-are-container">O que é a NOVA ERA</a></div>
+					<div class="indicator"><a href="#how-we-merged-container">Como a NOVA ERA surgiu</a></div>
+					<div class="indicator"><a href="#our-goal-container">Como pretendemos mudar isso</a></div>
+				</div>
+			</div>
+		</div>
 		
 		<!-- 3º Container -->
-		<div class="container-fluid"></div>
+		<div class="container-fluid" id="how-we-merged-container">
+			<div class="container">
+				<div class="indicators-wrapper">
+					<div class="indicator"><a href="#info-container">Informações sobre a Nova Era</a></div>
+					<div class="indicator"><a href="#who-we-are-container">O que é a NOVA ERA</a></div>
+					<div class="indicator active"><a href="#how-we-merged-container">Como a NOVA ERA surgiu</a></div>
+					<div class="indicator"><a href="#our-goal-container">Como pretendemos mudar isso</a></div>
+				</div>
+			</div>
+		</div>
 		
 		<!-- 4º Container -->
-		<div class="container-fluid"></div>
+		<div class="container-fluid" id="our-goal-container">
+			<div class="container">
+				<div class="indicators-wrapper">
+					<div class="indicator"><a href="#info-container">Informações sobre a Nova Era</a></div>
+					<div class="indicator"><a href="#who-we-are-container">O que é a NOVA ERA</a></div>
+					<div class="indicator"><a href="#how-we-merged-container">Como a NOVA ERA surgiu</a></div>
+					<div class="indicator active"><a href="#our-goal-container">Como pretendemos mudar isso</a></div>
+				</div>
+			</div>
+		</div>
+
 	</main>
 </body>
 <script src="scripts/activate_toggle_button.js"></script>
+<script src="scripts/scroll_page.js"></script>
 </html>
