--- a/quem-somos.html
+++ b/quem-somos.html
@@ -8,7 +8,7 @@
 
 	<link rel="stylesheet" type="text/css" href="styles/global.css">
 	<link rel="stylesheet" type="text/css" href="styles/navbar.css">
-	<link rel="stylesheet" type="text/css" href="styles//quem_somos.css">
+	<link rel="stylesheet" type="text/css" href="styles/quem_somos.css">
 </head>
 <body>
 	<!-- NAVBAR -->
@@ -37,7 +37,7 @@
 	<!-- MAIN CONTENT -->
 	<main id="main-content">
 		<!-- 1º Container -->
-		<div class="container-fluid" id="info-container" next="O que é a NOVA ERA">
+		<div class="container-fluid" id="info-container">
 			<div class="container">
 				<div class="text-container">
 					<!-- TITULO PRINCIPAL -->
