--- a/quem-somos.html
+++ b/quem-somos.html
@@ -8,7 +8,7 @@
 
 	<link rel="stylesheet" type="text/css" href="styles/global.css">
 	<link rel="stylesheet" type="text/css" href="styles/navbar.css">
-	<link rel="stylesheet" type="text/css" href="styles/quem_somos.css">
+	<link rel="stylesheet" type="text/css" href="/quem_somos.css">
 </head>
 <body>
 	<!-- NAVBAR -->
