--- a/quem-somos.html
+++ b/quem-somos.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/global.css">
 	<link rel="stylesheet" type="text/css" href="styles/navbar.css">
 	<link rel="stylesheet" type="text/css" href="styles/quem_somos.css">
+	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
 	<!-- NAVBAR -->
