dando push pra ver se fica bom no cell

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -73,7 +73,7 @@
 				</div>
 				<!-- Indicators -->
 				<div class="indicators-wrapper">
-					<div class="indicator active"><a href="#info-container">Informações sobre a NOVA ERA</a></div>
+					<div class="indicator active"><a href="#navbar">Informações sobre a NOVA ERA</a></div>
 					<div class="indicator"><a href="#who-we-are-container">O que é a NOVA ERA</a></div>
 					<div class="indicator"><a href="#how-we-merged-container">Como a NOVA ERA surgiu</a></div>
 					<div class="indicator"><a href="#our-goal-container">Como pretendemos mudar isso</a></div>
@@ -89,12 +89,12 @@
 		<div class="container-fluid" id="who-we-are-container">
 			<div class="container">
 				<!-- Previous Content Preview-->
-				<div class="preview-content previous" id="preview-content-js" target="#info-container">
+				<div class="preview-content previous" id="preview-content-js" target="#navbar">
 					<span>Informações sobre a NOVA ERA</span><ion-icon name="chevron-up-outline"></ion-icon>
 				</div>
 				<!-- Indicators -->
 				<div class="indicators-wrapper">
-					<div class="indicator"><a href="#info-container">Informações sobre a NOVA ERA</a></div>
+					<div class="indicator"><a href="#navbar">Informações sobre a NOVA ERA</a></div>
 					<div class="indicator active"><a href="#who-we-are-container">O que é a NOVA ERA</a></div>
 					<div class="indicator"><a href="#how-we-merged-container">Como a NOVA ERA surgiu</a></div>
 					<div class="indicator"><a href="#our-goal-container">Como pretendemos mudar isso</a></div>
@@ -115,7 +115,7 @@
 				</div>
 				<!-- Indicators -->
 				<div class="indicators-wrapper">
-					<div class="indicator"><a href="#info-container">Informações sobre a NOVA ERA</a></div>
+					<div class="indicator"><a href="#navbar">Informações sobre a NOVA ERA</a></div>
 					<div class="indicator"><a href="#who-we-are-container">O que é a NOVA ERA</a></div>
 					<div class="indicator active"><a href="#how-we-merged-container">Como a NOVA ERA surgiu</a></div>
 					<div class="indicator"><a href="#our-goal-container">Como pretendemos mudar isso</a></div>
@@ -136,7 +136,7 @@
 				</div>
 				<!-- Indicators -->
 				<div class="indicators-wrapper">
-					<div class="indicator"><a href="#info-container">Informações sobre a NOVA ERA</a></div>
+					<div class="indicator"><a href="#navbar">Informações sobre a NOVA ERA</a></div>
 					<div class="indicator"><a href="#who-we-are-container">O que é a NOVA ERA</a></div>
 					<div class="indicator"><a href="#how-we-merged-container">Como a NOVA ERA surgiu</a></div>
 					<div class="indicator active"><a href="#our-goal-container">Como pretendemos mudar isso</a></div>
