Foto e texto feitos, so falta dar os detalhes MAMA MIA

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -99,6 +99,16 @@
 					<div class="indicator"><a href="#how-we-merged-container">Como a NOVA ERA surgiu</a></div>
 					<div class="indicator"><a href="#our-goal-container">Como pretendemos mudar isso</a></div>
 				</div>
+				<!-- Content -->
+				<div class="text-container">
+					<h2 class="title">O que é NOVA ERA</h2>
+					<div>
+						<p class="topic">Seja Bem-Vindo!</p>
+						<p class="text">
+							A Nova Era é uma empresa de treinamento florestal que busca trazer para o futuro profissionais qualificados à área florestal. Somos uma empresa que busca investir no presente para que possamos ter um futuro melhor.
+						</p>
+					</div>
+				</div>
 				<!-- Next Content Preview-->
 				<div class="preview-content next" id="preview-content-js" target="#how-we-merged-container">
 					<span>Como a NOVA ERA surgiu</span><ion-icon name="chevron-down-outline"></ion-icon>
@@ -120,6 +130,13 @@
 					<div class="indicator active"><a href="#how-we-merged-container">Como a NOVA ERA surgiu</a></div>
 					<div class="indicator"><a href="#our-goal-container">Como pretendemos mudar isso</a></div>
 				</div>
+				<!-- Content -->
+				<div class="text-container">
+					<h2 class="title">Como a NOVA ERA surgiu</h2>
+					<p class="text">
+						A Nova Era surgiu no momento em que percebemos que atualmente não há muitos profissionais formados nessa área, então começamos a pensar o porquê disso, então chegamos à conclusão que é por que essa área além de não ser tão reconhecida, aqueles que buscam se profissionalizar nessa área não conseguem achar um material didático lúdico e bem explicado, o que acaba fazendo com que muitos achem DIFÍCIL, o que não é para aqueles que sonham em trabalhar com isso.
+					</p>
+				</div>
 				<!-- Next Content Preview-->
 				<div class="preview-content next" id="preview-content-js" target="#our-goal-container">
 					<span>Como pretendemos mudar isso</span><ion-icon name="chevron-down-outline"></ion-icon>
@@ -133,6 +150,13 @@
 				<!-- Previous Content Preview-->
 				<div class="preview-content previous" id="preview-content-js" target="#how-we-merged-container">
 					<span>Como a NOVA ERA surgiu</span><ion-icon name="chevron-up-outline"></ion-icon>
+				</div>
+				<!-- Content -->
+				<div class="text-container">
+					<h2 class="title">Como pretendemos mudar isso</h2>
+					<p class="text">
+						Ao percebermos esse problema, pensamos “Imagine se existisse uma empresa que tivesse um curso muito bem explicado e de fácil entendimento”, com isso surgiu a Nova Era. A Nova Era veio para mudar a realidade na área florestal e fazer com que no futuro haja muitos profissionais qualificados para a área e fazer com que mais pessoas descubram essa maravilhosa área do serviço florestal.
+					</p>
 				</div>
 				<!-- Indicators -->
 				<div class="indicators-wrapper">
