Texto alinhado para celular

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -42,7 +42,7 @@
 			<div class="container">
 				<div class="text-container">
 					<!-- TITULO PRINCIPAL -->
-					<h2 class="title">Informações sobre a NOVA ERA</h2>
+					<h2 class="title">Informações</h2>
 					
 					<!-- 1ª Topico -->
 					<h3 class="topic">Área de Atuação</h3>
@@ -132,7 +132,7 @@ s				</div>
 				<div class="text-container">
 					<h2 class="title">Como a NOVA ERA surgiu</h2>
 					<p class="text">
-						A Nova Era surgiu no momento em que percebemos que atualmente não há muitos profissionais formados nessa área, então começamos a pensar o porquê disso, então chegamos à conclusão que é por que essa área além de não ser tão reconhecida, aqueles que buscam se profissionalizar nessa área não conseguem achar um material didático lúdico e bem explicado, o que acaba fazendo com que muitos achem DIFÍCIL, o que não é para aqueles que sonham em trabalhar com isso.
+						A Nova Era surgiu no momento em que percebemos que atualmente não há muitos profissionais formados nessa área, então começamos a pensar o porquê disso, então chegamos à conclusão que é por que essa área além de não ser tão reconhecida, aqueles que buscam se profissionalizar nessa área não conseguem achar um material didático lúdico e bem explicado, o que acaba fazendo com que muitos achem DIFÍCIL, sendo que aqui na NOVA ERA se tornará fácil aprender tudo isso e fazer VOCÊ trabalhar com aquilo que deseja.
 					</p>
 				</div>
 				<!-- Next Content Preview-->
