--- a/quem-somos.html
+++ b/quem-somos.html
@@ -42,7 +42,7 @@
 			<div class="container">
 				<div class="text-container">
 					<!-- TITULO PRINCIPAL -->
-					<h2 class="title">Informações</h2>
+					<h2 class="title">Informações sobre a NOVA ERA</h2>
 					
 					<!-- 1ª Topico -->
 					<h3 class="topic">Área de Atuação</h3>
