--- a/quem-somos.html
+++ b/quem-somos.html
@@ -106,7 +106,7 @@
 					<p class="text">
 						A Nova Era é uma empresa de treinamento florestal que busca trazer para o futuro profissionais qualificados à área florestal. Somos uma empresa que busca investir no presente para que possamos ter um futuro melhor.
 					</p>						
-s				</div>
+				</div>
 				<!-- Next Content Preview-->
 				<div class="preview-content next" id="preview-content-js" target="#how-we-merged-container">
 					<span>Como a NOVA ERA surgiu</span><ion-icon name="chevron-down-outline"></ion-icon>
