--- a/quem-somos.html
+++ b/quem-somos.html
@@ -154,9 +154,11 @@
 				<!-- Content -->
 				<div class="text-container">
 					<h2 class="title">Como pretendemos mudar isso</h2>
-					<p class="text">
-						Ao percebermos esse problema, pensamos “Imagine se existisse uma empresa que tivesse um curso muito bem explicado e de fácil entendimento”, com isso surgiu a Nova Era. A Nova Era veio para mudar a realidade na área florestal e fazer com que no futuro haja muitos profissionais qualificados para a área e fazer com que mais pessoas descubram essa maravilhosa área do serviço florestal.
-					</p>
+					<div>
+						<p class="text">
+							Ao percebermos esse problema, pensamos “Imagine se existisse uma empresa que tivesse um curso muito bem explicado e de fácil entendimento”, com isso surgiu a Nova Era. A Nova Era veio para mudar a realidade na área florestal e fazer com que no futuro haja muitos profissionais qualificados para a área e fazer com que mais pessoas descubram essa maravilhosa área do serviço florestal.
+						</p>							
+					</div>
 				</div>
 				<!-- Indicators -->
 				<div class="indicators-wrapper">
