--- a/quem-somos.html
+++ b/quem-somos.html
@@ -66,7 +66,7 @@
 						</p>
 						
 						<!-- 3º Topico -->	
-						<h4 class="topic">Data de Fundação <span>Dezembro de 2020.</span></h4>
+						<h4 class="topic">Data de Fundação: <span class="text">Dez. de 2020.</span></h4>
 					</div>
 				</div>
 				<!-- Indicators -->
