Página de Contato para celular pequeno feito

--- a/contato.html
+++ b/contato.html
@@ -9,7 +9,7 @@
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="styles/global.css">
 	<link rel="stylesheet" href="styles/navbar.css">
-
+	<link rel="stylesheet" href="styles/contato.css">
 </head>
 <body>
 	<!-- NAVBAR -->
@@ -34,6 +34,55 @@
 				</ul>	
 		</div>
 	</nav>
+
+	<main>
+		<!-- First Container -->
+		<div class="first-container container flex-center-align">
+			<img src="images/Contato/Logo/Logo Nova Era.svg" alt="Logo Nova Era" class="logo">
+			<span class="logo-text">NOVA ERA</span>
+		</div>
+
+		<!-- Second Container -->
+		<div class="second-container container flex-center-align">
+			<h1 class="second-container__title">Alguma Dúvida?</h1>
+			<p class="second-container__text">
+				Tira ela imediamente conosco clicando em um dos nossos meios de contato abaixo
+			</p>
+		</div>
+
+		<!-- Third Container -->
+		<div class="third-container container flex-center-align">
+			<div class="contact-forms-wrapper">
+				<div class="cellphone-contact contact flex-center-align">
+					<img src="images/Contato/Icones/cellphone.svg" alt="Icone de Telefone">
+				</div>
+				<div class="email-contact contact flex-center-align">
+					<img src="images/Contato/Icones/mail.svg" alt="Icone de Envelope">
+				</div>
+			</div>
+		</div>
+
+		<!-- Fourth Container -->
+		<div class="fourth-container container flex-center-align">
+			<h2>Ou mande-a diretamente a nós</h2>
+			<div class="form-wrapper">				
+				<form action="" method="get" class="form">
+					<input type="text" value="Nome*" class="input-field">
+					<input type="email" value="Email*" class="input-field">
+					<input type="tel" value="Telefone*" class="input-field">
+					<input type="text" value="Cidade*" class="input-field">
+					<textarea class="input-field textarea" rows="5">Insira aqui a sua dúvida</textarea>
+					<button type="submit" class="form-btn">Enviar Dúvida</button>
+				</form>
+			</div>
+			<img src="images/Contato/Fourth Container Backgrounds/mobile small.jpg" alt="Detalhe inferior da quarta parte do Conteúdo" class="bottom-detail">
+		</div>
+
+		<!-- Rodapé -->
+		<footer>
+			<p>Alguma informação importante</p>
+		</footer>
+	</main>
 </body>
 <script src="scripts/activate_toggle_button.js"></script>
 </html>
