Feature das formas de contato sendo trabalhada
Comecei a faze-la pela animação

--- a/contato.html
+++ b/contato.html
@@ -55,9 +55,23 @@
 			<div class="contact-forms-wrapper">
 				<div class="cellphone-contact contact flex-center-align">
 					<img src="images/Contato/Icones/cellphone.svg" alt="Icone de Telefone">
+					<div class="content-hide">
+						<p>Deseja ver nossos telefones de Contato?</p>
+						<div class="buttons">
+							<button>Sim</button>
+							<button>Não</button>
+						</div>
+					</div>
 				</div>
 				<div class="email-contact contact flex-center-align">
 					<img src="images/Contato/Icones/mail.svg" alt="Icone de Envelope">
+					<div class="content-hide">
+						<p>Deseja ver nossos emails de contato?</p>
+						<div class="buttons">
+							<button>Sim</button>
+							<button>Não</button>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
