ajeitando o terceiro container

--- a/contato.html
+++ b/contato.html
@@ -43,26 +43,22 @@
 		</div>
 
 		<!-- Second Container -->
-		<div class="second-container container flex-center-align">
-			<h1 class="second-container__title">Alguma Dúvida?</h1>
-			<p class="second-container__text">
-				Tira ela imediatamente conosco clicando em um dos nossos meios de contato abaixo
-			</p>
+		<div class="container second-container flex-center-align">
+			<div class="content">
+				<h1>Alguma Dúvida?</h1>
+				<p>
+					Tira ela imediatamente conosco clicando em um dos nossos meios de contato abaixo
+				</p>	
+			</div>
 		</div>
 
-		<!-- Third Container -->
-		<div class="third-container container flex-center-align">
-			<!-- Formas de Contato-->
-			<div class="contact-forms-wrapper">
-				
-				<!-- Contato: Telefone -->
-				<div class="cellphone-contact contact flex-center-align" id="phone-contact">
-					<img src="images/Contato/Icones/cellphone.svg" alt="cone de Telefone">
+		<div class="container third-container flex-center-align">
+			<div class="contacts-wrapper">
+				<div class="contact">
+					<img src="images/Contato/Icones/cellphone.svg" alt="">
 				</div>
-
-				<!-- Contato: Email -->
-				<div class="email-contact contact flex-center-align" id="email-contact">
-					<img src="images/Contato/Icones/mail.svg" alt="Icone de Envelope">
+				<div class="contact">
+					<img src="images/Contato/Icones/mail.svg" alt="">
 				</div>
 			</div>
 		</div>
